EXTRA_DIST = CMakeLists.txt \
	     README.md \
	     actions.md \
	     autoproperties.md \
	     basic-usage.md \
	     configuration.md \
	     development.md \
	     faq.md \
	     overview.md \
	     pekwm.1 \
	     pekwm.1.md \
	     pekwm_bg.1 \
	     pekwm_bg.1.md \
	     pekwm_dialog.1 \
	     pekwm_dialog.1.md \
	     pekwm_panel.1 \
	     pekwm_panel.1.md \
	     pekwm_panel.md \
	     pekwm_screenshot.1 \
	     pekwm_screenshot.1.md \
	     pekwm_theme.1 \
	     pekwm_theme.1.md \
	     themes.md
