icon_files = battery.png \
	     battery-ac.png \
	     battery-battery.png \
	     flag.png \
	     flag-de.png \
	     flag-dk.png \
	     flag-fi.png \
	     flag-fr.png \
	     flag-is.png \
	     flag-no.png \
	     flag-se.png \
	     flag-us.png
EXTRA_DIST = CMakeLists.txt $(icon_files)

icondir = $(pkgdatadir)/icons
icon_DATA = $(icon_files)

